--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   "repository":         {"type": "git", "url": "git://github.com/pmuellr/cf-node-hello" },
   "dependencies":
     {
-      "express":        "3.4.x"
+      "cfenv":          "1.0.x"
     }
   }
